# agl

./: .gitignore  Cargo.toml  README.md  build.rs  build_swift_framework.sh  test.agl
.github/workflows/: build-release.yml
agl/: block.agl  block2.agl  satyrless.agl
agl/src/: lib.rs  main.rs
example/: spyro2_gems_lives.agl  test.agl
site/: package-lock.json  package.json  vite.config.ts
site/src/routes/: +page.svelte  Compile.svelte
src/: agl.rs  agl.udl  asd.lalrpop  ast.rs  astsmpl.rs  compiler.rs  lib.rs  main.rs  parser.lalrpop  parsersmpl.lalrpop
