[package]
name = "agl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
lalrpop = "0.19.9"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
lalrpop-util = {version = "0.19.9", features = ["lexer"]}
regex = "1.7.3"
wasm-bindgen = "0.2.84"
